Fix elements overlapping in form. Change form link to T&C Add a new noscript to fix google site not being recognised

--- a/assets/scss/molecules/_form-section.scss
+++ b/assets/scss/molecules/_form-section.scss
@@ -159,6 +159,10 @@
       margin: 0 12px;
       top: 2px;
     }
+
+    @media (max-width: $screen-xs-max) {
+      bottom: -50px;
+    }
   }
 }
 
